sfdx-source/main/default/objects/PC_User__c/PC_User__c.object-meta.xml
<CustomObject>
    <description>This object will hold information about the location of the FLPs and Specialists.</description>
    <label>PrC User</label>
    <nameField>
        <displayFormat>PCUser-{0000000000}</displayFormat>
        <label>PrC User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PrC Users</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>