sfdx-source/main/default/objects/PC_User__c/fields/Current_Location__c.field-meta.xml
<CustomField>
    <fullName>Current_Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Allows a user&apos;s location to be set.</description>
    <label>Current Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>PrC Users</relationshipLabel>
    <relationshipName>PrC_Users</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>