sfdx-source/main/default/objects/PC_User__c/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <description>This formula field will display the latitude information at Prc User object. Prc User record has a lookup relation with VAF Address and Address object. If VAF Address record is associated with Prc Record then this formula field will display the latitude information from VAF Address record else it will display the latitude information from Address object.</description>
    <formula>IF( Location_Address__c != null,Location_Address__r.VAF_Latitude__c, Location_Address2__r.VAF_Latitude__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>