sfdx-source/main/default/objects/PC_User__c/fields/Location_Address__c.field-meta.xml
<CustomField>
    <fullName>Location_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Allows to lookup location address.</description>
    <inlineHelpText>Allows to lookup location address.</inlineHelpText>
    <label>VAF Address</label>
    <referenceTo>VAF_Address__c</referenceTo>
    <relationshipLabel>PrC Users</relationshipLabel>
    <relationshipName>PrC_Users</relationshipName>
    <type>Lookup</type>
</CustomField>