sfdx-source/main/default/objects/PC_User__c/fields/Longitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude__c</fullName>
    <description>This formula field will display the Longitude  information at Prc User object. Prc User record has a lookup relation with VAF Address and Address object. If VAF Address record is associated with Prc Record then this formula field will display the latitude information from VAF Address record else it will display the longitude information from Address object.</description>
    <formula>IF( Location_Address__c != null,Location_Address__r.VAF_Longitude__c,  Location_Address2__r.VAF_Longitude__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Longitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>