sfdx-source/main/default/objects/PC_User__c/fields/User_ID__c.field-meta.xml
<CustomField>
    <fullName>User_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Allows a user to be selected.</description>
    <label>User ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PrC_Users</relationshipName>
    <type>Lookup</type>
</CustomField>